--- a/css/style.css
+++ b/css/style.css
@@ -429,6 +429,30 @@ header {
     opacity: .5;
 }
 
+/* Resume */
+
+.section__title--resume {
+  /*color: var(--clr-accent); */
+  position: relative;
+  text-align: center;
+}
+
+.section__title-resume::after {
+  content: '';
+  display: block;
+  width: 2em;
+  height: 1px;
+  margin: 0.5em auto 1em;
+  background: var(--clr-light);
+  opacity: 0.25;
+}
+
+
+.section__title--apps {
+  /*color: var(--clr-accent); */
+  position: relative;
+  text-align: center;
+}
 
 /* footer */
 
