--- a/css/style.css
+++ b/css/style.css
@@ -404,7 +404,7 @@ header {
 
 .portfolio {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(450px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(250px, 600px));
 }
 
 .portfolio__item {
